@@ -5879,8 +5879,7 @@ table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSo
 	background-color: #8dbdd8;
 }
 #login-page {
-	height:130px;
-	width:240px;
+	width:360px;
 	background:white;
 	margin:0 auto;
 	overflow:hidden;
@@ -5888,12 +5887,26 @@ table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSo
 	border:3px #c0dde9 solid;
 	border-radius:5px;	
 }
+#login-page table {width: 100%;}
+#login-page td {padding: 3px;}
+#login-page input[type=text], #login-page input[type=password] {width: 100%;}
+#login-page input[type=submit]{
+    width: 82px;
+    height: 32px;
+    border: none;
+    background: url(../images/button-bg.png) no-repeat;
+    color: #FFF;
+    font-size:13px;
+    font-weight:bold;
+}
+#login-page input[type=submit]:hover{
+    opacity:0.8;
+	cursor:pointer;
+}
 #Topmenu-block {
 	margin:0 auto;
 	overflow:hidden;
 	padding:15px;
 	border:3px #c0dde9 solid;
 	border-radius:5px;	
-	
 }
-/* custom css code ends */
